adjust colab notebook

--- a/Example_notebook_colab.ipynb
+++ b/Example_notebook_colab.ipynb
@@ -62,10 +62,8 @@
       },
       "outputs": [],
       "source": [
-        "repo_url = \"https://github.com/JanvDelden/diffusion_minimizing_vibrations.git\"\n",
-        "token = \"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\"\n",
-        "repo_url_with_token = repo_url[:8] + token + \"@\" + repo_url[8:]\n",
-        "!git clone {repo_url_with_token}"
+        "repo_url = \"https://github.com/ecker-lab/diffusion_minimizing_vibrations.git\"\n",
+        "!git clone {repo_url}"
       ]
     },
     {
