update colab notebook

--- a/Example_notebook_colab.ipynb
+++ b/Example_notebook_colab.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JanvDelden/diffusion_minimizing_vibrations/blob/main/Example_notebook_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ecker-lab/diffusion_minimizing_vibrations/blob/main/Example_notebook_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -77,6 +77,7 @@
         "%cd diffusion_minimizing_vibrations/\n",
         "%pip uninstall jax -y\n",
         "%pip install diffusers==0.11.1\n",
+        "%pip install huggingface_hub==0.25.0\n",
         "%pip install . --no-dependencies"
       ]
     },
@@ -337,8 +338,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
